# ChangeLog for app-i18n/uim
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-i18n/uim/ChangeLog,v 1.147 2006/12/04 19:01:32 corsair Exp $

  04 Dec 2006; Markus Rothe <corsair@gentoo.org> uim-1.2.1.ebuild:
  Stable on ppc64; bug #156872

  04 Dec 2006; Christian Faulhammer <opfer@gentoo.org> uim-1.2.1.ebuild:
  stable x86, bug #156872

  04 Dec 2006; Jason Wever <weeve@gentoo.org> uim-1.2.1.ebuild:
  Stable on SPARC wrt bug #156872 .

  05 Nov 2006; Bryan Østergaard <kloeri@gentoo.org> uim-1.2.1.ebuild:
  Add ~alpha keyword.

  31 Oct 2006; Jason Wever <weeve@gentoo.org> uim-1.2.1.ebuild:
  Added ~sparc keyword wrt bug #152265.

  23 Oct 2006; Markus Rothe <corsair@gentoo.org> uim-1.2.1.ebuild:
  Added ~ppc64; bug #152265

  07 Oct 2006; MATSUU Takuto <matsuu@gentoo.org> uim-1.2.1.ebuild:
  Added app-i18n/anthy-ss to DEPEND.

  05 Oct 2006; MATSUU Takuto <matsuu@gentoo.org> uim-1.2.1.ebuild:
  Added "append-flags -DQT_THREAD_SUPPORT".

  30 Sep 2006; MATSUU Takuto <matsuu@gentoo.org> uim-1.2.1.ebuild:
  Fixed fails to build with USE="gtk -canna -anthy", Bug 149132.

*uim-1.2.1 (24 Sep 2006)

  24 Sep 2006; MATSUU Takuto <matsuu@gentoo.org> +uim-1.2.1.ebuild:
  Version bumped.
  Added anthy, eb, gnome, libedit and prime USE flag.
  Removed ~alpha, ~hppa, ~ppc64 and ~sparc because dev-libs/eb doesn't have them.

*uim-1.2.0 (05 Aug 2006)

  05 Aug 2006; Mamoru KOMACHI <usata@gentoo.org> +uim-1.2.0.ebuild:
  Version bumped.

  09 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> uim-0.5.0.1.ebuild,
  uim-1.0.1.ebuild, uim-1.1.1.ebuild:
  Pinpoint virtual/x11 version to less than 7.

*uim-1.1.1 (07 Jul 2006)

  07 Jul 2006; Mamoru KOMACHI <usata@gentoo.org> -uim-1.0.0.ebuild,
  -uim-1.1.0.ebuild, +uim-1.1.1.ebuild:
  Version bumped.

  24 Jun 2006; Doug Goldstein <cardoe@gentoo.org> uim-0.5.0.1.ebuild,
  uim-1.0.0.ebuild, uim-1.0.1.ebuild, uim-1.1.0.ebuild:
  USE flag qt->qt3/qt4 change

*uim-1.1.0 (17 Jun 2006)
