@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/m17n-lib/Attic/m17n-lib-1.3.3.ebuild,v 1.5 2006/12/04 18:56:31 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/m17n-lib/Attic/m17n-lib-1.3.3.ebuild,v 1.6 2006/12/05 22:52:11 jer Exp $
 
 inherit flag-o-matic
 
@@ -11,7 +11,7 @@ SRC_URI="http://www.m17n.org/m17n-lib/download/${P}.tar.gz"
 LICENSE="LGPL-2.1"
 
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~hppa ~ppc ppc64 sparc x86"
+KEYWORDS="~alpha ~amd64 hppa ~ppc ppc64 sparc x86"
 IUSE=""
 
 DEPEND="|| ( (
