@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/m17n-lib
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/m17n-lib/ChangeLog,v 1.28 2006/12/04 18:56:31 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/m17n-lib/ChangeLog,v 1.29 2006/12/05 22:52:11 jer Exp $
+
+  05 Dec 2006; Jeroen Roovers <jer@gentoo.org> m17n-lib-1.3.3.ebuild:
+  Stable for HPPA (bug #156872).
 
   04 Dec 2006; Markus Rothe <corsair@gentoo.org> m17n-lib-1.3.3.ebuild:
   Stable on ppc64; bug #156872
