@@ -1,6 +1,9 @@
 # ChangeLog for app-i18n/uim
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/uim/ChangeLog,v 1.147 2006/12/04 19:01:32 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/uim/ChangeLog,v 1.148 2006/12/05 22:56:31 jer Exp $
+
+  05 Dec 2006; Jeroen Roovers <jer@gentoo.org> uim-1.2.1.ebuild:
+  Stable for HPPA (bug #156872).
 
   04 Dec 2006; Markus Rothe <corsair@gentoo.org> uim-1.2.1.ebuild:
   Stable on ppc64; bug #156872
